# Razrabotka

./: CMakeLists.txt  OnlineShopQt.pro  README.txt  catalogwindow.cpp  catalogwindow.h  catalogwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  orderwindow.cpp  orderwindow.h  orderwindow.ui  product.h  Оптимизация и рефакторинг кода на C++
